# heroi

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: agents.rs  checkpoints.rs  files.rs  git.rs  github.rs  ide.rs  mod.rs  repos.rs  scripts.rs  settings.rs  workspace_lifecycle.rs  workspaces.rs  worktrees.rs
src-tauri/src/models/: agent.rs  checkpoint.rs  file.rs  git.rs  github.rs  mod.rs  repo.rs  scripts.rs  workspace.rs
src/components/checkpoints/: CheckpointTimeline.tsx
src/components/diff/: DiffFileTree.tsx  DiffViewer.tsx  UnifiedDiff.tsx
src/components/files/: FileBrowser.tsx
src/components/git/: CommitSection.tsx  DiffPreview.tsx  FileTreeGroup.tsx  GitFileItem.tsx  GitSidebar.tsx  GitStatusList.tsx
src/components/layout/: AppLayout.tsx  TopBar.tsx
src/components/pr/: PrPanel.tsx  PrStatusBadge.tsx
src/components/scripts/: RunPanel.tsx
src/components/settings/: AgentSettings.tsx  GeneralSettings.tsx  ProviderSettings.tsx  SettingsModal.tsx
src/components/sidebar/: AddRepoButton.tsx  CreateWorktreeDialog.tsx  RepoItem.tsx  RepoList.tsx  RepoSidebar.tsx  WorktreeItem.tsx
src/hooks/: useCheckpoints.ts  useGitStatus.ts  usePrStatus.ts  usePty.ts  useRepos.ts  useScripts.ts
src/lib/: agents.ts  constants.ts  tauri.ts
src/stores/: useAppStore.ts  useTerminalStore.ts
src/styles/: global.css
src/types/: index.ts
(+12 files in other folders)
